--- a/JustinRobersonPortfolio.html
+++ b/JustinRobersonPortfolio.html
@@ -13,7 +13,7 @@
         <div class="dropdown">
             <button class="dropbtn">Justin Roberson - Software Engineer</button>
             <div class="dropdown-content">
-              <a href="About.html" id="droplink">About Myself</a>
+              <a href="about.html" id="droplink">About Myself</a>
               <a href="projects.html" id="droplink">Projects</a>
               <a href="contact.html" id="droplink">Contact</a>
               <a href="resume.html" id="droplink">Resume</a>
