--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <nav>
         <ul>
             <li><a href="JustinRobersonPortfolio.html">Home</a></li>
-            <li><a href="About.html">About Me</a></li>
+            <li><a href="about.html">About Me</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
