--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
     <nav>
         <ul class="ul1">
             <li class="li1"><a href="JustinRobersonPortfolio.html" class="a1">Home</a></li>
-            <li class="li1"><a href="About.html" class="a1">About Me</a></li>
+            <li class="li1"><a href="about.html" class="a1">About Me</a></li>
             <li class="li1"><a href="projects.html" class="a1">Projects</a></li>
             <li class="li1"><a href="resume.html" class="a1">Resume</a></li>
             <li class="li1"><a href="contact.html" class="a1">Contact</a></li>
